--- a/views/template.pug
+++ b/views/template.pug
@@ -5,7 +5,7 @@ html
 		title="Hello Pug"
 	body
 		p Zaloguj się, aby uzyskać pełen dostęp do informacji!
-		form(action='http://localhost:3000/login-in',method='GET')
+		form(action='http://localhost:3000/auth/google',method='GET')
 			p 
 				| Login 
 				input(type='text',name='login')
