--- a/views/log-in-page.pug
+++ b/views/log-in-page.pug
@@ -4,7 +4,4 @@ html
 		meta(charset="UTF-8")
 		title="Log in page"
 	body
-		p Witaj na naszej stronie 
-			b #{user.login}
-		| Twoje hasło to: 
-		b #{user.password} 
+		p Witaj na naszej stronie!
