--- a/views/template.pug
+++ b/views/template.pug
@@ -6,10 +6,4 @@ html
 	body
 		p Zaloguj się, aby uzyskać pełen dostęp do informacji!
 		form(action='http://localhost:3000/auth/google',method='GET')
-			p 
-				| Login 
-				input(type='text',name='login')
-			p 
-				| Password 
-				input(type='password', name='password')
-			input(type='submit', value='Zaloguj')
+			button(type='submit') Zaloguj
